--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -10,6 +10,12 @@ body {
       }
     }
 
+    &.MuiButton-containedSecondary {
+      background-color: transparent;
+      color: black;
+      box-shadow: none;
+    }
+
     &.MuiButton-outlinedPrimary {
       border-color: #d27a3d;
       color: #d27a3d;
