--- a/src/components/Header/DrawerMenu/DrawerMenu.scss
+++ b/src/components/Header/DrawerMenu/DrawerMenu.scss
@@ -68,4 +68,13 @@
     margin-left: 6px;
     margin-top: 9px;
   }
+
+  .filter-select {
+    width: 200px;
+    height: 32px;
+    border: 1px solid rgba(0, 0, 0, 0.51);
+    border-radius: 5px;
+    margin: 9px 0 15px 25px;
+    padding: 0 10px;
+  }
 }
