--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,10 +1,10 @@
 .main-page-desktop-wrapper {
-  margin: 20px auto 45px;
+  margin: 40px auto 45px;
   display: flex;
   justify-content: center;
 
   .filter-wrapper {
-    width: 14%;
+    width: 16%;
 
     .filter-button-wrapper {
       display: flex;
@@ -59,56 +59,120 @@
   }
 
   .feed-wrapper {
-    width: 50%;
+    width: 70%;
     padding-left: 66px;
+  }
+}
 
-    .ad-wrapper {
-      margin-bottom: 36px;
+.main-page-mobile-wrapper {
+  margin: 25px 20px 20px;
+}
+
+.ad-wrapper {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+
+  .pic-wrapper {
+    img {
+      border: 1px solid rgba(0, 0, 0, 0.30);
+      border-radius: 4px;
+      width: 186px;
+      height: 120px;
+    }
+
+    @media only screen and (max-width: 1024px) {
+      img {
+        width: 140px;
+        height: 110px;
+      }
+    }
+
+    @media only screen and (max-width: 425px) {
+      img {
+        width: 140px;
+        height: 110px;
+      }
+    }
+  }
+
+  .info-wrapper {
+    margin-left: 20px;
+    width: 77%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 4px;
+
+    .breed,
+    .price {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .description {
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.51);
+      height: 18px;
+      width: 600px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      word-break: break-all;
+      margin-bottom: 10px;
+    }
+
+    @media only screen and (max-width: 1120px) {
+      .description {
+        width: 500px;
+      }
+    }
+
+    @media only screen and (max-width: 940px) {
+      .description {
+        width: 390px;
+      }
+    }
+
+    @media only screen and (max-width: 768px) {
+      .description {
+        width: 400px;
+      }
+    }
+
+    @media only screen and (max-width: 610px) {
+      .description {
+        width: 300px;
+      }
+    }
+
+    @media only screen and (max-width: 510px) {
+      .description {
+        width: 200px;
+      }
+    }
+
+    .location-date-wrapper {
+      margin-top: 13px;
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.51);
       display: flex;
       justify-content: space-between;
+    }
+  }
 
-      .pic-wrapper {
-
-        img {
-          border: 1px solid rgba(0, 0, 0, 0.51);
-          border-radius: 5px;
-          width: 186px;
-          height: 107px;
-        }
-
-        @media only screen and (max-width: 1024px) {
-          img {
-            width: 140px;
-          }
-        }
+  @media only screen and (max-width: 375px) {
+    .info-wrapper {
+      .breed,
+      .price {
+        font-size: 14px;
       }
 
-      .info-wrapper {
-        margin-left: 20px;
-        width: 37vw;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.51);
-        margin-bottom: 4px;
+      .description {
+        font-size: 12px;
+        width: 100px;
+      }
 
-        .breed,
-        .price {
-          font-size: 18px;
-          margin-bottom: 10px;
-        }
-
-        .description {
-          font-size: 14px;
-          color: rgba(0, 0, 0, 0.51);
-          text-overflow: ellipsis;
-          white-space: nowrap;
-          overflow: hidden;
-          margin-bottom: 10px;
-        }
-
-        .location {
-          margin-top: 10px;
-          font-size: 14px;
-          color: rgba(0, 0, 0, 0.51);
-        }
+      .location-date-wrapper {
+        font-size: 12px;
       }
     }
   }
