--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,6 +14,7 @@
     padding: 0;
 
     .toolbar-left-side.desktop {
+      cursor: pointer;
       width: 34.5%;
       display: flex;
       justify-content: center;
@@ -129,5 +130,19 @@
       margin: 0 29px;
       padding: 0 10px;
     }
+  }
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .modal-content {
+    width: fit-content;
+    block-size: fit-content;
+    min-width: 300px;
+    min-height: 126px;
+    padding: 20px;
   }
 }
