--- a/src/pages/Ad/Ad.scss
+++ b/src/pages/Ad/Ad.scss
@@ -1,5 +1,5 @@
 .ad-page-desktop-wrapper {
-  margin: 40px auto 45px;
+  margin: 40px auto 40px;
 
   .picture-info-seller-wrapper {
     display: flex;
@@ -47,33 +47,12 @@
     .buttons-seller-info-wrapper {
       width: 325px;
 
-      .call-button-wrapper {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 10px;
-
-        .call-button {
-          width: 100%;
-        }
-      }
-
-      .email-button-wrapper {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 15px;
-
-        .email-button {
-          width: 100%;
-        }
-      }
-
       .seller-info-wrapper {
         display: flex;
         justify-content: space-between;
 
         .avatar-wrapper {
           display: inline-block;
-          //margin-right: 13px;
           width: 90px;
           height: 90px;
           overflow: hidden;
@@ -288,5 +267,258 @@
         font-size: 18px;
       }
     }
+  }
+}
+
+.ad-page-tablet-wrapper,
+.ad-page-mobile-wrapper {
+  margin: 20px auto 45px;
+  overflow-x: hidden;
+
+  .pic-wrapper-wrapper {
+    display: flex;
+    justify-content: center;
+
+    .pic-wrapper {
+      border: 1px solid rgba(0, 0, 0, 0.30);
+      border-radius: 4px;
+      margin: 0 20px;
+      overflow: hidden;
+      cursor: pointer;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+
+.ad-page-tablet-wrapper {
+  .info-wrapper {
+    margin: 0 4% 0 4%;
+    width: 100%;
+
+    .date {
+      margin-top: 10px;
+      color: rgba(0, 0, 0, 0.51);
+      font-size: 14px;
+      width: 300px;
+    }
+
+    .breed-location-price-buttons-wrapper {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+
+      .breed-location-price-wrapper {
+        .breed {
+          font-size: 28px;
+        }
+
+        .location {
+          margin-top: 5px;
+          font-size: 16px;
+          color: rgba(0, 0, 0, 0.51);
+        }
+
+        .price {
+          font-size: 30px;
+          padding-top: 20px;
+        }
+      }
+
+      .buttons-wrapper {
+        width: 30%;
+        margin-right: 11%;
+
+        .call-button-wrapper {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 10px;
+
+          .call-button {
+            width: 100%;
+          }
+        }
+
+        .email-button-wrapper {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 15px;
+
+          .email-button {
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    .description-title {
+      font-size: 25px;
+      margin-top: 15px;
+      font-weight: 500;
+    }
+
+    .description {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-size: 16px;
+      width: 100%;
+      color: #3b4144;
+    }
+
+    .seller-info-wrapper {
+      display: flex;
+      justify-content: left;
+
+      .avatar-wrapper {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+        border: 1px solid rgba(0, 0, 0, 0.30);
+        border-radius: 4px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .info-wrapper {
+        width: 70%;
+        margin: 0 0 0 15px;
+
+        .username{
+          font-size: 20px;
+          margin-bottom: 20px;
+        }
+
+        .ads-count {
+          color: rgba(0, 0, 0, 0.51);
+          font-size: 15px;
+          margin-bottom: 7px;
+        }
+
+        .date {
+          word-wrap: break-word;
+          color: rgba(0, 0, 0, 0.51);
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
+.ad-page-mobile-wrapper {
+  .info-wrapper {
+    margin: 0 20px 0 25px;
+
+    .date {
+      margin-top: 10px;
+      color: rgba(0, 0, 0, 0.51);
+      font-size: 14px;
+      width: 300px;
+    }
+
+    .breed-location-price-wrapper {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 15px;
+
+      .breed-location-wrapper {
+        .breed {
+          font-size: 24px;
+        }
+
+        .location {
+          margin-top: 5px;
+          font-size: 16px;
+          color: rgba(0, 0, 0, 0.51);
+        }
+      }
+
+      .price {
+        font-size: 27px;
+        padding-right: 15px;
+        padding-top: 5px;
+      }
+    }
+
+    .description-title {
+      font-size: 25px;
+      margin-top: 15px;
+      font-weight: 500;
+    }
+
+    .description {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-size: 16px;
+      width: 100%;
+      color: #3b4144;
+    }
+
+    .seller-info-wrapper {
+      display: flex;
+      justify-content: left;
+
+      .avatar-wrapper {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        overflow: hidden;
+        border: 1px solid rgba(0, 0, 0, 0.30);
+        border-radius: 4px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .info-wrapper {
+        width: 55%;
+        margin: 0 0 0 10px;
+
+        .username{
+          font-size: 16px;
+          margin-bottom: 20px;
+        }
+
+        .ads-count {
+          color: rgba(0, 0, 0, 0.51);
+          font-size: 12px;
+          margin-bottom: 7px;
+        }
+
+        .date {
+          word-wrap: break-word;
+          color: rgba(0, 0, 0, 0.51);
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
+
+.call-button-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+
+  .call-button {
+    width: 100%;
+  }
+}
+
+.email-button-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+
+  .email-button {
+    width: 100%;
   }
 }
