--- a/src/components/Header/DrawerMenu/DrawerMenu.scss
+++ b/src/components/Header/DrawerMenu/DrawerMenu.scss
@@ -1,5 +1,5 @@
 .drawer-wrapper {
-  width: 250px;
+  width: 100vw;
 
   .drawer-icons {
     height: 70px;
@@ -20,7 +20,7 @@
     padding: 15px 0;
 
     .submit-button {
-      width: 180px;
+      width: 280px;
     }
   }
 
@@ -51,31 +51,41 @@
     margin: 9px 25px 0;
   }
 
-  .left-search {
-    border: 1px solid rgba(0, 0, 0, 0.51);
-    border-radius: 5px;
-    padding: 0 10px;
-    width: 97px;
-    margin-left: 25px;
+  .price-filter-wrapper {
+    padding: 0 25px;
     margin-top: 9px;
+    display: flex;
+    justify-content: center;
+
+    .left-search {
+      border: 1px solid rgba(0, 0, 0, 0.51);
+      border-radius: 5px;
+      padding: 0 10px;
+      width: 50%;
+      margin-right: 3px;
+      margin-left: 0;
+    }
+
+    .right-search {
+      border: 1px solid rgba(0, 0, 0, 0.51);
+      border-radius: 5px;
+      padding: 0 10px;
+      width: 50%;
+      margin-left: 3px;
+    }
   }
 
-  .right-search {
-    border: 1px solid rgba(0, 0, 0, 0.51);
-    border-radius: 5px;
-    padding: 0 10px;
-    width: 97px;
-    margin-left: 6px;
-    margin-top: 9px;
-  }
+  .filter-select-wrapper {
+    padding: 0 25px;
+    margin-bottom: 15px;
 
-  .filter-select {
-    width: 200px;
-    height: 32px;
-    border: 1px solid rgba(0, 0, 0, 0.51);
-    border-radius: 5px;
-    margin: 9px 0 15px 25px;
-    padding: 0 10px;
+    .filter-select {
+      width: 100%;
+      height: 32px;
+      border: 1px solid rgba(0, 0, 0, 0.51);
+      border-radius: 5px;
+      padding: 0 10px;
+    }
   }
 
   .reset-filters {
