improve drawer menu filter style

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -15,3 +15,9 @@
   margin-left: 6px;
   margin-top: 9px;
 }
+
+@media only screen and (max-width: 768px) {
+  .filter-select {
+    margin-top: 15px;
+  }
+}
