--- a/src/components/Header/LoginOrRegisterModal/LoginOrRegisterModal.scss
+++ b/src/components/Header/LoginOrRegisterModal/LoginOrRegisterModal.scss
@@ -57,6 +57,16 @@
     margin: -5px 25px;
   }
 
+  .validation-registration {
+    font-size: 14px;
+    color: #d00000;
+    margin: -10px 25px 15px;
+  }
+
+  .input.validate {
+    border: 1px solid #d00000;
+  }
+
   .button-wrapper {
     display: flex;
     justify-content: center;
