create pic upload area in register modal

--- a/src/components/AdFormModal/AdFormModal.scss
+++ b/src/components/AdFormModal/AdFormModal.scss
@@ -150,6 +150,7 @@
             text-overflow: ellipsis;
             overflow: hidden;
             margin-left: 18px;
+            white-space: nowrap;
           }
 
           .re-upload-file-button {
