--- a/src/pages/ErrorPage/ErrorPage.scss
+++ b/src/pages/ErrorPage/ErrorPage.scss
@@ -17,6 +17,10 @@
         -webkit-text-stroke-color: #230203;
     }
 
+    .four.one {
+        margin-left: 10px;
+    }
+
     .logo {
         margin-top: 75px;
 
