--- a/src/pages/Ad/Ad.scss
+++ b/src/pages/Ad/Ad.scss
@@ -16,6 +16,7 @@
       img {
         width: 300px;
         height: 190px;
+        object-fit: cover;
       }
     }
 
@@ -60,7 +61,9 @@
           border-radius: 4px;
 
           img {
-            width: 90px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
           }
         }
 
@@ -110,6 +113,7 @@
         img {
           width: 280px;
           height: 170px;
+          object-fit: cover;
         }
       }
 
@@ -150,10 +154,6 @@
           .avatar-wrapper {
             width: 75px;
             height: 75px;
-
-            img {
-              width: 75px;
-            }
           }
 
           .info-wrapper {
@@ -192,11 +192,6 @@
       .pic-wrapper {
         width: 270px;
         height: 160px;
-
-        img {
-          width: 270px;
-          height: 160px;
-        }
       }
 
       .info-wrapper {
@@ -240,6 +235,7 @@
 
             img {
               width: 70px;
+              object-fit: cover;
             }
           }
 
@@ -383,6 +379,7 @@
         img {
           width: 100%;
           height: 100%;
+          object-fit: cover;
         }
       }
 
@@ -475,6 +472,7 @@
         img {
           width: 100%;
           height: 100%;
+          object-fit: cover;
         }
       }
 
