--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -95,6 +95,7 @@
       border-radius: 4px;
       width: 186px;
       height: 120px;
+      object-fit: cover;
     }
 
     @media only screen and (max-width: 1024px) {
