--- a/src/components/AdFormModal/AdFormModal.scss
+++ b/src/components/AdFormModal/AdFormModal.scss
@@ -106,11 +106,28 @@
         height: 25px;
         width: 150px;
       }
+
+      @media screen and (max-width: 480px) {
+        .file-name {
+          width: 150px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          margin-left: 5px;
+          white-space: nowrap;
+        }
+
+        .re-upload-file-button {
+          font-size: 6px;
+          margin-top: 5px;
+          height: 25px;
+          width: 100px;
+        }
+      }
     }
   }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px) {
   .new-ad-modal {
     width: 300px;
 
@@ -139,19 +156,6 @@
 
         .publish-button {
           width: 85px;
-        }
-
-        .drag-and-drop-wrapper {
-          .file-name {
-            width: 110px;
-          }
-
-          .re-upload-file-button {
-            font-size: 6px;
-            margin-top: 5px;
-            height: 25px;
-            width: 100px;
-          }
         }
       }
     }
