--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -119,7 +119,24 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     margin-bottom: 4px;
 
-    .breed,
+    .breed-owner-wrapper {
+      display: flex;
+      justify-content: space-between;
+
+      .breed {
+        font-size: 18px;
+      }
+
+      .owner {
+        color: #d27a3d;
+        border: 1px solid #d27a3d;
+        border-radius: 15px;
+        height: 21px;
+        width: 52px;
+        text-align: center;
+      }
+    }
+
     .price {
       font-size: 18px;
       margin-bottom: 10px;
@@ -134,6 +151,7 @@
       overflow: hidden;
       white-space: nowrap;
       word-break: break-all;
+      margin-top: 10px;
       margin-bottom: 10px;
     }
 
@@ -178,7 +196,13 @@
 
   @media only screen and (max-width: 375px) {
     .info-wrapper {
-      .breed,
+
+      .breed-owner-wrapper {
+        .breed {
+          font-size: 14px;
+        }
+      }
+
       .price {
         font-size: 14px;
       }
